# wg-manager

./: .gitignore  Cargo.toml  README.md  wgman.conf
docker-dev-env/: Dockerfile.dev  README.md  docker-compose.yml  peer1.conf  peer2.conf  server.conf
src/: cli.rs  main.rs  manager.rs  utils.rs  wg.rs
