[package]
name = "wg-manager"
version = "0.1.0"
authors = ["Sam Wedgwood <sam@wedgwood.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
ipnet = "2.3.0"
json = "0.12.4"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.64"